--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
 
-    <title>Vite + React</title>
+    <title>Felix's Website</title>
   </head>
   <body>
     <div id="root"></div>
