adding meta tag

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:opsz,wght@8..32,400..700&display=swap"
       rel="stylesheet"
     />
+    <meta
+      name="facebook-domain-verification"
+      content="bhkvn2ldctlnslrb7piyldz9knklz5"
+    />
 
     <title>Felix Harris</title>
   </head>
